[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemySpawning_scene.gd" type="Script" id=1]
[ext_resource path="res://scn/prototype_files/Spawnfly.tscn" type="PackedScene" id=2]

[node name="EnemySpawning_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPosition" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -640, -448 )

[node name="Position2D2" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -512, -576 )

[node name="Position2D3" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -384, -576 )

[node name="Position2D4" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -256, -576 )

[node name="Position2D5" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( -128, -576 )

[node name="Position2D6" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 0, -576 )

[node name="Position2D7" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 128, -576 )

[node name="Position2D8" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 256, -576 )

[node name="Position2D9" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 384, -576 )

[node name="Position2D10" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 512, -576 )

[node name="Position2D11" type="Position2D" parent="SpawnPosition" groups=["spawnn"]]
position = Vector2( 640, -448 )

[node name="Spawnfly" parent="." instance=ExtResource( 2 )]
position = Vector2( -669, -994 )

[node name="StaySpawnPos" type="Node2D" parent="."]
position = Vector2( 503, -889 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="spawndiffinterval" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="spawndiffinterval" to="." method="_on_spawndiffinterval_timeout"]
